...
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginUSCIDEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="USC ID"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="14sp" />

    </LinearLayout>
...
