...
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp" />


    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewTitle"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/buttonDepartments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Classes"
        android:layout_below="@id/buttonProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/buttonMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Registered Classes"
        android:layout_below="@id/buttonDepartments"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
