...
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:text="User ID"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
        android:id="@+id/buttonProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/buttonBlock"
        android:layout_centerVertical="true"
        android:text="Profile"/>

...
